feat: 将项目名称从 Cover Craft 更改为 Cova
更新项目名称及相关引用，包括文档、配置文件、存储键名和 GitHub 链接等

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Dancing+Script&family=Great+Vibes&family=Satisfy&display=swap" rel="stylesheet" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;700&family=ZCOOL+XiaoWei&family=ZCOOL+QingKe+HuangYou&family=Ma+Shan+Zheng&display=swap" rel="stylesheet" crossorigin="anonymous">
-    <title>Cover Craft</title>
+    <title>Cova</title>
   </head>
   <body>
     <div id="root"></div>
